--- a/themes/TWCParty/layout/components/footer.ejs
+++ b/themes/TWCParty/layout/components/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <p class="site-info">
-    Proudly powered by Rytass and Labb01. Copyright® TWCParty Corp.
+    Proudly powered by Rytass and Labb01.
     </br>
     <% if (config.author){ %>
     &copy; <%= new Date().getFullYear() %> <%= config.author %>
