--- a/themes/TWCParty/source/css/components/header.styl
+++ b/themes/TWCParty/source/css/components/header.styl
@@ -4,6 +4,8 @@ $siteDescColor = #9e9e9e
 
 header
   line-height 1.8rem
+  padding 0 0 3.2rem 0
+  border-bottom 2px dashed $siteABgColor
 
   .site-branding
     text-align center
@@ -18,22 +20,25 @@ header
 
       a
         display inline-block
-        color $siteAColor
         font-weight bolder
-        background-color $siteABgColor
-        line-height 3rem
-        height 3rem
         padding 0 1rem
         -webkit-transition padding 0.3s ease-out
         transition padding 0.3s ease-out
+        background-image url(../images/logo.png)
+        background-repeat no-repeat
+        background-position center
+        width 200px
+        height 200px
+        background-size 200px
+        font-size 0
 
         &:hover
           padding: 0 1.5rem
 
     .site-description
       color $siteDescColor
-      font-size 1.3rem
-      margin 1rem 0 0
+      font-size 0
+      margin 0
 
   .site-navigation
     text-align center
